# qt-fileproc

./: CMakeLists.txt  FileProc.pro  file_proc.cpp  file_proc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
